[package]
name = "lunar_lander"
version = "0.1.0"
authors = ["Bruno Muciño <mucinoab@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ggez = "0.8.0"
rand = "0.8.5"
simdnoise = "3.1.6"
ncollide2d = "0.33.0"
